force-app/main/default/objects/Web_Site_Submission__c/Web_Site_Submission__c.object-meta.xml
<CustomObject>
    <description>This is object is used to store values from website forms and distribute the record values to other respective objects.</description>
    <label>Web Site Submission</label>
    <nameField>
        <label>Web Site Submissions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Site Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>