force-app/main/default/objects/Web_Site_Submission__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>This field is used to store Email address given in the Web Form when it  is submitted.</description>
    <inlineHelpText>This field is auto populated when this Web Site Submission record is created.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>