force-app/main/default/objects/Web_Site_Submission__c/fields/Payment_Details__c.field-meta.xml
<CustomField>
    <fullName>Payment_Details__c</fullName>
    <label>Payment Details</label>
    <length>50</length>
    <type>Text</type>
</CustomField>